--- a/src/app/administration/presentation/pages/officers-manage/officers-manage.component.html
+++ b/src/app/administration/presentation/pages/officers-manage/officers-manage.component.html
@@ -28,6 +28,11 @@
       <td mat-cell *matCellDef="let element">{{ element.dni }}</td>
     </ng-container>
 
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef>Correo</th>
+      <td mat-cell *matCellDef="let element" class="max-w-[100px]">{{ element.email }}</td>
+    </ng-container>
+
     <ng-container matColumnDef="telefono">
       <th mat-header-cell *matHeaderCellDef>Telefono</th>
       <td mat-cell *matCellDef="let element">{{ element.telefono }}</td>
@@ -36,7 +41,7 @@
     <ng-container matColumnDef="activo">
       <th mat-header-cell *matHeaderCellDef>Estado</th>
       <td mat-cell *matCellDef="let element" class="w-32">
-         <span
+        <span
           class="inline-flex items-center rounded-md px-2 py-1 text-xs font-medium ring-1 ring-inset"
           [ngClass]="
             element.activo
